--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -1,21 +1,29 @@
 #msgWindow {
+  position: relative;
+  background-color: #fff;
   display: inline-block;
-  white-space: pre;
   overflow-y: auto;
-  overflow-x: hidden;
-  width: 700px;
-  max-width: 700px;
-  height: 550px;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  max-height: 100%;
+  table-layout: fixed;
+  box-sizing: border-box;
+}
+ 
+h1{
+	color: #3366BB;
 }
  
 #roomWindow {
+  background-color: #fff;
   white-space: pre;
   overflow-y: auto;
   overflow-x: hidden;
-  width: 250px;
-  height: 550px;
+  width: 100%;
+  height: 100%;
 }
- 
+
 .shadow {
   box-shadow: 2px 2px 4px 1px #000000;
   padding-top: 10px;
@@ -24,18 +32,24 @@
   padding-left: 15px;
 }
 
+.shadowL {
+  box-shadow: 0px 2px 4px 1px #000000;
+  padding-top: 10px;
+  padding-right: 1px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+}
+
 .allMsg {
-	max-width: 550px !important;
-	white-space: pre-wrap;
-	word-break: break-all;
+  display: inline;
+  white-space: pre-wrap;
+  word-break: keep-all;
+  word-wrap: break-word;
 }
  
 .userSpan {
-	font-size: 9pt;
+	
 	background-color: #FFFFCC;
-	width: 100px;
-	max-width: 100px;
-	min-width: 100px;
 }
 
  .privTag {
@@ -45,14 +59,14 @@
 .privMsg {
   font-style:italic;
   white-space: pre-wrap;
+  word-break: break-all;
 }
  
 .sysMsg {
   font-style: italic;
   color: grey;
-  white-space: pre-wrap;
 }
 
-.tipSpan{
-	width: 50px;
+.input{
+	background-color: #eee;
 }
